Fixed overflow

--- a/abilities.css
+++ b/abilities.css
@@ -2,6 +2,7 @@
   position: relative;
   background-color: #2b303a;
   color: white;
+  overflow-y: hidden;
 }
 
 #abilities h2 {
@@ -272,6 +273,7 @@ h4.is-visible {
     justify-content: center;
     align-items: center;
     right: 17%;
+    margin-bottom: 20rem;
   }
   .lang h4 {
     font-size: 2.5em;
